change entry to contact
